orchestrators/kubernetes/quick_start/aqua-csp-quick-hostpath.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aqua-audit-db
    deployedby: aqua-yaml
  name: aqua-audit-db
  namespace: aqua
spec:
  ports:
    - port: 5432
  selector:
    app: aqua-audit-db
  type: ClusterIP 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aqua-audit-db
    deployedby: aqua-yaml
  name: aqua-audit-db
  namespace: aqua
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aqua-audit-db
  template:
    metadata:
      labels:
        app: aqua-audit-db
      name: aqua-audit-db
      namespace: aqua
    spec:
      serviceAccount: aqua-sa
      restartPolicy: Always
      containers:
      - name: aqua-audit-db
        image: registry.aquasec.com/database:6.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          tcpSocket:
            port: 5432
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 5432
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - mountPath: /var/lib/postgresql
          name: postgres-audit-db
        ports:
        - containerPort: 5432
          protocol: TCP
      volumes:
      - name: postgres-audit-db
        persistentVolumeClaim:
          claimName: aqua-audit-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aqua-db
    deployedby: aqua-yaml
  name: aqua-db
  namespace: aqua
spec:
  ports:
    - port: 5432
  selector:
    app: aqua-db
  type: ClusterIP 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aqua-db
    deployedby: aqua-yaml
  name: aqua-db
  namespace: aqua
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aqua-db
  template:
    metadata:
      labels:
        app: aqua-db
      name: aqua-db
      namespace: aqua
    spec:
      serviceAccount: aqua-sa
      restartPolicy: Always
      containers:
      - name: aqua-db
        image: registry.aquasec.com/database:6.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          tcpSocket:
            port: 5432
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 5432
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - mountPath: /var/lib/postgresql
          name: postgres-db
        ports:
        - containerPort: 5432
          protocol: TCP
      volumes:
      - name: postgres-db
        persistentVolumeClaim:
          claimName: aqua-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: aqua-web
  namespace: aqua
  labels:
    app: aqua-web
spec:      
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8443
      name: aqua-web-ssl
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: aqua-web
  selector:
    app: aqua-web
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aqua-web
  namespace: aqua
  labels:
    app: aqua-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aqua-web
  template:
    metadata:
      labels:
        app: aqua-web
      name: aqua-web
    spec:
      securityContext:
        runAsUser: 11431
        runAsGroup: 11433
        fsGroup: 11433
      serviceAccount: aqua-sa
      restartPolicy: Always
      containers:
      - name: aqua-web
        image: registry.aquasec.com/console:6.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 30
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: aqua-gateway
  namespace: aqua
  labels:
    app: aqua-gateway
spec:
  type: LoadBalancer
  ports:
    - port: 8443
      protocol: TCP
      targetPort: 8443
      name: aqua-gateway-ssl
    - port: 3622
      protocol: TCP
      targetPort: 3622
      name: aqua-gateway
  selector:
    app: aqua-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aqua-gateway
  name: aqua-gateway
  namespace: aqua
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aqua-gateway
  template:
    metadata:
      labels:
        app: aqua-gateway
      name: aqua-gateway
    spec:
      securityContext:
        runAsUser: 11431
        runAsGroup: 11433
        fsGroup: 11433
      serviceAccount: aqua-sa
      restartPolicy: Always
      containers:
      - name: aqua-gateway
        image: registry.aquasec.com/gateway:6.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            port: 8082
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          tcpSocket:
            port: 8443
          initialDelaySeconds: 60
          periodSeconds: 30
        ports:
        - containerPort: 3622
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: kube-enforcer-admission-hook-config
  namespace: aqua
webhooks:
  - name: imageassurance.aquasec.com
    failurePolicy: Ignore
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["pods", "deployments", "replicasets", "replicationcontrollers", "statefulsets", "daemonsets", "jobs", "cronjobs"]
    clientConfig:
      # Please follow instruction in document to generate new CA cert
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFVENDQWZtZ0F3SUJBZ0lVTkljWmkzL2xqbEtObFZ0WXBwVyttN2xWZnNVd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0Z6RVZNQk1HQTFVRUF3d01ZV1J0YVhOemFXOXVYMk5oTUNBWERUSXdNRGd5TnpBNU5EZ3dNMW9ZRHpJeQpPVFF3TmpFeU1EazBPREF6V2pBWE1SVXdFd1lEVlFRRERBeGhaRzFwYzNOcGIyNWZZMkV3Z2dFaU1BMEdDU3FHClNJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUURZSlovRmRjVUtDdmdqSHlVVnhxWitRTTBRLzNGYzQyTzkKUGlXTllGS2l3L1FJTUIxTHZpQklXSFQyVEZLRkVYYUtZcmdzTHE0MElFZWMyN2Jvd2RTbXJVZEV3bEdtNkQrMQpIaGROQWI4WEll [...]
      service:
        namespace: aqua
        name: aqua-kube-enforcer
    timeoutSeconds: 5
    admissionReviewVersions: ["v1beta1"]
    sideEffects: "None"
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: kube-enforcer-me-injection-hook-config
  namespace: aqua
webhooks:
  - name: microenforcer.aquasec.com
    failurePolicy: Ignore
    clientConfig:
      service:
        name: aqua-kube-enforcer
        namespace: aqua
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFVENDQWZtZ0F3SUJBZ0lVTkljWmkzL2xqbEtObFZ0WXBwVyttN2xWZnNVd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0Z6RVZNQk1HQTFVRUF3d01ZV1J0YVhOemFXOXVYMk5oTUNBWERUSXdNRGd5TnpBNU5EZ3dNMW9ZRHpJeQpPVFF3TmpFeU1EazBPREF6V2pBWE1SVXdFd1lEVlFRRERBeGhaRzFwYzNOcGIyNWZZMkV3Z2dFaU1BMEdDU3FHClNJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUURZSlovRmRjVUtDdmdqSHlVVnhxWitRTTBRLzNGYzQyTzkKUGlXTllGS2l3L1FJTUIxTHZpQklXSFQyVEZLRkVYYUtZcmdzTHE0MElFZWMyN2Jvd2RTbXJVZEV3bEdtNkQrMQpIaGROQWI4WEll [...]
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["v1"]
        resources: ["pods"]
    timeoutSeconds: 5
    admissionReviewVersions: ["v1beta1"]
    sideEffects: "None"
---
apiVersion: v1
kind: Service
metadata:
  name: aqua-kube-enforcer
  namespace: aqua
spec:
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: aqua-kube-enforcer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aqua-kube-enforcer
  namespace: aqua
  labels:
    app: aqua-kube-enforcer
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: aqua-kube-enforcer
    spec:
      serviceAccountName: aqua-kube-enforcer-sa
      containers:
        - name: kube-enforcer
          image: registry.aquasec.com/kube-enforcer:6.2
          imagePullPolicy: Always
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          ports:
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: "kube-enforcer-ssl"
              mountPath: "/certs"
      volumes:
        - name: "kube-enforcer-ssl"
          secret:
            secretName: "kube-enforcer-ssl"
            items:
            - key: server.crt
              path: server.crt
            - key: server.key
              path: server.key            
      imagePullSecrets:
        - name: aqua-registry
  selector:
    matchLabels:
      app: aqua-kube-enforcer
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: aqua-agent
  name: aqua-agent
  namespace: aqua
spec:
  selector:
    matchLabels:
      app: aqua-agent
  template:
    metadata:
      labels:
        app: aqua-agent
      name: aqua-agent
      namespace: aqua
      annotations:
        container.apparmor.security.beta.kubernetes.io/aqua-agent: unconfined
    spec:
      containers:
      - env:
        - name: AQUA_NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        - name: AQUA_TOKEN
          valueFrom:
            secretKeyRef:
              key: token
              name: enforcer-token
        image: registry.aquasec.com/enforcer:6.2
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8096
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /readinessz
            port: 8096
          initialDelaySeconds: 60
          periodSeconds: 30
        ports:
        - containerPort: 8096
          protocol: TCP
        name: aqua-agent
        resources: {}
        securityContext:
          privileged: false
          capabilities:
              add:
                - SYS_ADMIN
                - NET_ADMIN
                - NET_RAW
                - SYS_PTRACE
                - KILL
                - MKNOD
                - SETGID
                - SETUID
                - SYS_MODULE
                - AUDIT_CONTROL
                - SYSLOG
                - SYS_CHROOT
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/run
          name: var-run
        - mountPath: /dev
          name: dev
        - mountPath: /host/sys
          name: sys
          readOnly: true
        - mountPath: /host/proc
          name: proc
          readOnly: true
        - mountPath: /host/etc
          name: etc
          readOnly: true
        - mountPath: /host/opt/aquasec
          name: aquasec
          readOnly: true
        - mountPath: /opt/aquasec/tmp
          name: aquasec-tmp
        - mountPath: /opt/aquasec/audit
          name: aquasec-audit
        - mountPath: /data
          name: aquasec-data
      dnsPolicy: ClusterFirst
      hostPID: true
      imagePullSecrets:
      - name: aqua-registry
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: aqua-sa
      serviceAccountName: aqua-sa
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /var/run
          type: ""
        name: var-run
      - hostPath:
          path: /dev
          type: ""
        name: dev
      - hostPath:
          path: /sys
          type: ""
        name: sys
      - hostPath:
          path: /proc
          type: ""
        name: proc
      - hostPath:
          path: /etc
          type: ""
        name: etc
      - hostPath:
          path: /var/lib/aquasec
          type: ""
        name: aquasec
      - hostPath:
          path: /var/lib/aquasec/tmp
          type: ""
        name: aquasec-tmp
      - hostPath:
          path: /var/lib/aquasec/audit
          type: ""
        name: aquasec-audit
      - hostPath:
          path: /var/lib/aquasec/data
          type: ""
        name: aquasec-data
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
